--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#172b4d</color>
+    <color name="grey_100">#ebecf0</color>
+    <color name="orange_500">#db4c3f</color>
 </resources>
